<resources>
    <string name="app_name">TimeWise_RSA2023</string>
    <string name="login">login</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="name">name</string>
    <string name="confirm_password">confirm password</string>
    <string name="register">register</string>
    <string name="click_to_login">Already have an account? Click to login</string>
    <string name="click_to_signup">Don\'t have an account? Click to sign up</string>
    <string name="logout">Logout</string>
    <string name="what_type_of">what type of</string>
    <string name="begin_quiz">Begin Quiz</string>
    <string name="learner_are_you">learner are you?</string>
    <string name="progress">Progress</string>
    <string name="ans_a">Ans A</string>
    <string name="ans_b">Ans B</string>
    <string name="this_is_the_question">This is the question</string>
    <string name="welcome_back">welcome back, </string>
    <string name="backward"><![CDATA[<-]]></string>
    <string name="forward"><![CDATA[->]]></string>
    <string name="back_text">Back</string>
    <string name="select_a_timer">select a timer</string>
    <string name="start_a_pomodoro_timer">start a pomodoro timer</string>
    <string name="what_is_a_pomodoro_timer">what is a pomodoro timer?</string>
    <string name="start_timer">Start Timer</string>
    <string name="new_task">new task</string>
</resources>