<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/background"
    tools:context=".BeginQuiz">

    <TextView
        android:id="@+id/whatTypeOf"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/what_type_of"
        android:fontFamily="@font/brandishregular"
        android:textColor="@color/main"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/learnerAreYou"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/learner_are_you"
        android:fontFamily="@font/brandishregular"
        android:textColor="@color/main"
        android:paddingBottom="15dp"
        android:textSize="30sp" />

    <Button
        android:id="@+id/beginQuiz"
        android:paddingHorizontal="30dp"
        android:paddingVertical="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/persansb"
        android:gravity="center"
        android:backgroundTint="@color/white"
        android:textColor="@color/main"
        android:text="@string/begin_quiz" />

</LinearLayout>